--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -14,6 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jooq.version>3.13.1</jooq.version>
 		<vertx-jooq.version>5.1.1</vertx-jooq.version>
+		<micrometer.version>1.5.3</micrometer.version>
 	</properties>
 
 	<dependencyManagement>
@@ -112,10 +113,20 @@
 		</dependency>
 
 		<!-- for Dropwizard metrics -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.vertx</groupId> -->
+<!-- 			<artifactId>vertx-dropwizard-metrics</artifactId> -->
+<!-- 		</dependency> -->
+
 		<dependency>
 			<groupId>io.vertx</groupId>
-			<artifactId>vertx-dropwizard-metrics</artifactId>
-<!-- 			<version>4.1.2</version> -->
+			<artifactId>vertx-micrometer-metrics</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-jmx</artifactId>
+			<version>${micrometer.version}</version>
 		</dependency>
 
 	</dependencies>
